[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avrzero"
version = "0.0.2"
authors = [
  { name="Edward Ji", email="jiziao6@gmail.com" },
]
description = "A simple AVR instruction set simulator for educational purposes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Edward-Ji/AVRZero"
"Bug Tracker" = "https://github.com/Edward-Ji/AVRZero/issues"
